<resources>
    <string name="app_name">Features_andApplications</string>


    //brainTrainer App
    <string name="timerTextView">30s</string>
    <string name="sumTextView">31 + 12</string>
    <string name="scoreTextView">0/0</string>
    <string name="Button0">3</string>
    <string name="correctTexView">Correct!</string>
    <string name="Go">Go!</string>
    <string name="nulls">null</string>

</resources>
